--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    <!-- <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" /> -->
-
-    <link rel="stylesheet" href="index.css?r.4.13">
+    <link rel="stylesheet" href="index.css?r.4.14">
     <link rel="stylesheet" href="style.css?r.2.4">
     <link rel="stylesheet" href="contador.css?r.2.3">
     <link rel="stylesheet" href="index_anim.css?r.0">
-    <link rel="stylesheet" href="index_medias.css?r.1.10">
+    <link rel="stylesheet" href="index_medias.css?r.1.11">
     <script src="scrollreveal.js"></script>
-    <style>
-      /* @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap'); */
-      </style>
-      <style>
- /* @import url('https://fonts.googleapis.com/css2?family=Piedra&family=Sansita+Swashed:wght@500;600;700;800;900&display=swap'); */
-       </style> 
       
   </head>
 
@@ -148,6 +140,30 @@ outa
         y tambien ser un experto en <a href="https://definicion.de/seguridad-informatica/">Seguridad Informatica</a> . </p>
         <!-- <p>Nuestra mission, superarlos.</p> -->
       </div>
+    </div>
+    <!-- **************************************EXPERIENCIA*************************** -->
+    <div class="cont_expe">
+      <h1>EXPERIENCIA</h1>
+      <div class="experiencia">
+
+        <div class="experiencia_img">
+          <img src="proyecto/html.png" alt="">
+          <h2>HTML</h2>
+        </div>
+        <div class="experiencia_img">
+          <img src="proyecto/css.png" alt="">
+          <h2>CSS</h2>
+        </div>
+        <div class="experiencia_img">
+          <img src="proyecto/js.png" alt="">
+          <h2>JavaScript</h2>
+        </div>
+      </div>
+
+      <p>Enfocado 100% en el aprendizaje del lenguaje de programacion y desarrollo web,
+        mi meta es:<br>  1. Ser desarrollador web <br>  2. Ser desarrollador de Software <br>
+         3. Ser un experto en Seguridad Informatica.
+      </p>
     </div>
 
     <!-- *****************************LALA********************************** -->
